# kernelizer

./: .gitignore  Cargo.toml  README.md  context.md  gemini-extension.json
.claude-plugin/: plugin.json
commands/: kernelize-fast.toml  kernelize.toml
skills/kernelize/: SKILL.md
src/: cli.rs  error.rs  lib.rs  main.rs  repomap.rs  template.rs
