[package]
name = "kernelizer-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = []

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full", "rt-multi-thread"] }
thiserror = "1.0.60"
walkdir = "2.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
